修正了语言兼容性问题，升级并固定版本号